--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ nav button {
     font-size: 17px;
     margin-top: 30px;
     font-weight: lighter;
-    
+    text-align: center;
 }
 
 .sm1 {
@@ -88,10 +88,7 @@ nav button {
 .but1 {
     background-color: black;
     border-radius: 6px;
-    padding-top: 8px;
-    padding-bottom: 8px;
-    padding-right: 17px;
-    padding-left: 17px;
+    padding: 8px 17px;
     color: white;
     cursor: pointer;
     border: 1px solid gray;
@@ -100,10 +97,7 @@ nav button {
 
 .but2 {
     border-radius: 6px;
-    padding-top: 8px;
-    padding-bottom: 8px;
-    padding-right: 17px;
-    padding-left: 17px;
+    padding: 8px 17px;
     color: white;
     background-color: red;
     cursor: pointer;
@@ -270,32 +264,35 @@ nav button {
     .gridbox {
         padding: 0 60px;
     }
+    .btn-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
     .but3 {
-        width:200px;
-        height: 15px;
+        margin-top: 30px;
     }
     .but4 {
-        height:45px;
-        width: 120px;
+        margin-top: 30px;
     }
 }
 @media screen and (max-width:500px){
-    .small {
-        font-size: 12px;
-        margin-top: 15px;
-    }
     .but1 {
-    border-radius: 4px;
-    padding-top: 6px;
-    padding-bottom: 6px;
-    padding-right: 14px;
-    padding-left: 14px;
+    width: 50px;
+    height: 20px; 
+    padding: 4px 10px;
+    border-radius: 3px;
+    font-size: xx-small;
     }
     .but2 {
-    border-radius: 4px;
-    padding-top: 6px;
-    padding-bottom: 6px;
-    padding-right: 14px;
-    padding-left: 14px;
+    width: 50px;
+    height: 20px;    
+    border-radius: 3px;
+    padding: 4px 10px;
+    font-size: xx-small;
+    }
+   
+    .logo {
+        height: 25px;
     }
 }
