--- a/style.css
+++ b/style.css
@@ -357,6 +357,7 @@ nav button {
     }
     .but4 {
         margin-top: 30px;
+        padding: 10px;
     }
     .container-wrapper {
         margin: 0 50px;
