--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 body {
     overflow-y: auto;
+    overflow-x: hidden;
     background-color: black;
+    font-family: 'Poppins', sans-serif;
 }
 
 * {
@@ -10,12 +12,12 @@ body {
 
 .main {
     background-image: url("images/bg.jpeg");
-    height: 650px;
+    height: 700px;
     position: relative;
 }
 
 .box {
-    height: 650px;
+    height: 700px;
     width: 100%;
     opacity: 0.55;
     background-color: black;
@@ -43,7 +45,7 @@ nav img {
     position: absolute;
     top: 0;
     left: 0;
-    height: 650px;
+    height: 700px;
     width: 100%;
     pointer-events: none;
     z-index: 2;
@@ -59,13 +61,13 @@ nav button {
 }
 
 .text {
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size: 65px;
+    font-family: 'Poppins', sans-serif;
+    font-size: 55px;
     font-weight: bolder;
     height: calc(100% - 210px);
     display: flex;
     flex-direction: column;
-    margin-top: 140px;
+    margin-top: 160px;
     margin-bottom: 0;
     align-items: center;
     color: white;
@@ -74,14 +76,16 @@ nav button {
 }
 
 .small {
-    font-family: 'Times New Roman', Times, serif;
-    font-size: 17px;
+    font-size: 15px;
     margin-top: 30px;
+    padding: 0 30px;
     font-weight: lighter;
     text-align: center;
 }
 
 .sm1 {
+    font-family: 'Poppins', sans-serif;
+    font-weight: bold;
     margin-top: 12px;
     margin-bottom: 0;
 }
@@ -109,73 +113,102 @@ nav button {
 .but3 {
     height: 25px;
     width: 350px;
-    background-color: black;
+    background-color: rgba(28, 28, 28, 0.8);
     border: 1px solid gray;
     border-radius: 5px;
     padding: 15px;
     margin-top: 0px;
+    
     color: white;
 }
 
+.but3::placeholder{
+    font-weight: bolder;
+    color: #999999;
+    font-size: 14px;
+    opacity: 1;
+}
+
+
 .but4 {
-    background-color: red;
+    background-color: rgb(223, 0, 0);
     color: white;
     height: 55px;
-    width: 180px;
+    width: 190px;
     border: 1px solid gray;
     border-radius: 5px;
     font-weight: bolder;
     cursor: pointer;
 }
 
-.line {
+.four {
+    margin-bottom: 100px;
+}
+
+/* .line {
     height: 7px;
     background-color: rgb(69, 66, 66);
+} */
+.netflix-divider {
+  width: 100%;
+  height: 60px;
+  overflow: hidden;
+  background-color: transparent;
+  box-shadow: blue;
 }
+
+.netflix-divider svg {
+  width: 100%;
+  height: 100%;
+  display: block;
+   position: relative;
+
+} 
+
 .text-1 {
     background-color: black;
     color: white;
     font-size: 25px;
     padding-top: 40px;
     padding-bottom: 20px;
-    text-align: center;
+    text-align: left;
+    margin-left: 160px;
 }
- 
+
 .container {
-  background-color: black;
-  width: 100%;
+    background-color: black;
+    width: 100%;
 }
 
 .container-wrapper {
-  background-color: black;
-  margin: 0 170px;
-  padding: 20px 0;
+    background-color: black;
+    margin: 0 170px;
 }
 
 .movie-list {
-  list-style: none;
-  overflow: hidden;       
-  border-radius: 10px;
-  transition: transform 0.4s ease-in-out;
+    list-style: none;
+    overflow: hidden;
+    border-radius: 10px;
+    transition: transform 0.4s ease-in-out;
 }
 
 .movie-list .movie-item:hover {
-  transform: scale(1.03);
-  z-index: 100;  
+    transform: scale(1.03);
+    z-index: 100;
 }
 
 .movie-link {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: auto;
-  border-radius: 10px;
-  overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: auto;
+    border-radius: 10px;
+    overflow: hidden;
 }
 
 .movie-link a {
     display: block;
-    
+
 }
 
 .swiper-slide {
@@ -183,40 +216,64 @@ nav button {
 }
 
 .movie-link img {
-               
-  border-radius: 10px;       
-  transition: transform 0.4s ease-in-out;
+    border-radius: 10px;
+    transition: transform 0.4s ease-in-out;
+    
 }
 
-.movie-link:hover img {
-  transform: scale(1.06);    
+.movie-link img:hover{
+    transform: scale(1.06);
 }
 
 .movie-link img {
     height: auto;
     width: 180px;
 }
+
 .faqbox {
     padding-top: 60px;
-    text-align:center ;
+    text-align: left;
     background-color: black;
-    color: white; 
-    font-size: 20px;
+    color: white;
+    font-size: 17px;
+    
+}
+
+.faq {
+    width: 78vw;
+    margin: 0 auto;
+    text-align: left;
 }
 
 .faqbox h2 {
     margin-bottom: 20px;
+    font-weight: normal;
 }
 
 .hero {
     display: flex;
+    position: relative;
+    font-family: 'Poppins', sans-serif;
+    font-weight: normal;
+    justify-content: space-between;
     margin: 10px auto;
-    width: 80vw;
+    width: 75vw;
     background-color: rgb(44, 44, 44);
     padding: 25px;
     font-size: 25px;
     cursor: pointer;
     transition: background-color 0.45s cubic-bezier(0.25, 0.1, 0.25, 1);
+}
+
+.plus {
+    position: absolute;
+    right: 20px;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 55px;
+    line-height: 1;
+    pointer-events: none;
+    font-weight: 200;
 }
 
 .hero:hover {
@@ -232,52 +289,53 @@ nav button {
     color: white;
 }
 
-.footer > :first-child {
+.footer> :first-child {
     padding-bottom: 20px;
 
 }
-.footer > :nth-child(2) {
+
+.footer> :nth-child(2) {
     padding-bottom: 50px;
 }
 
 .custom-footer {
-  background-color: #000;
-  color: #999;
-  padding: 40px 120px;
-  font-family: Arial, sans-serif;
-  text-align: left;
+    background-color: #000;
+    color: #999;
+    padding: 40px 120px;
+    font-family: Arial, sans-serif;
+    text-align: left;
 }
 
 .custom-footer-top a {
-  color: #999;
-  text-decoration: none;
-  display: block;
-  margin-bottom: 20px;
+    color: #999;
+    text-decoration: none;
+    display: block;
+    margin-bottom: 20px;
 }
 
 .custom-footer-links {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-  gap: 20px;
-  margin-bottom: 30px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    gap: 20px;
+    margin-bottom: 30px;
 }
 
 .custom-footer-links ul {
-  list-style: none;
-  text-decoration: underline;
-  padding: 0;
-  margin: 0;
+    list-style: none;
+    text-decoration: underline;
+    padding: 0;
+    margin: 0;
 }
 
 .custom-footer-links a {
-  color: #999;
-  text-decoration: none;
-  font-size: 14px;
-  line-height: 2;
+    color: #999;
+    text-decoration: none;
+    font-size: 14px;
+    line-height: 2;
 }
 
 .custom-footer-links a:hover {
-  text-decoration: underline;
+    text-decoration: underline;
 }
 
 .footer-bottom>p {
@@ -310,55 +368,85 @@ nav button {
     .container-wrapper {
         margin: 0 100px;
     }
+    .text-1 {
+        margin-left: 80px;
+    }
 }
 
 @media screen and (max-width: 1300px) {
     .movie-link img {
-    height: auto;
-    width: 180px;
+        height: auto;
+        width: 180px;
+    }
 }
-}
+
 @media screen and (max-width: 1150px) {
     .movie-link img {
-    height: auto;
-    width: 160px;
-    border-radius: 8px;
+        height: auto;
+        width: 160px;
+        border-radius: 8px;
+    }
+    .plus {
+        font-size: 50px;
+    }
 }
-}
+
 @media screen and (max-width: 1000px) {
     .movie-link img {
-    height: auto;
-    width: 150px;
-}
+        height: auto;
+        width: 150px;
+    }
+    .text-1 {
+        font-size:large;
+    }
+    .faqbox h2 {
+        font-size: large;
+    }
+     .plus {
+        font-size: 45px;
+    }
+     .faq {
+        width: 80vw;
+    }
 }
 
 @media screen and (max-width: 800px) {
-    .footer-bottom small{
-    padding-left: 40px;
-    padding-right: 40px;
+    .footer-bottom small {
+        padding-left: 40px;
+        padding-right: 40px;
     }
+
     .custom-footer {
         padding-left: 40px;
     }
+
     .language {
         margin-left: 40px;
     }
+
     .footer-bottom>p {
         padding: 40px;
     }
+
     .faqbox {
-    padding-top: 40px;
-    font-size: 17px;
+        padding-top: 40px;
+        font-size: 17px;
     }
+
     .hero {
-    padding: 20px;
-    font-size: 20px;
+        padding: 20px;
+        font-size: 20px;
     }
-     .movie-link img {
-    height: auto;
-    width: 140px;
-     border-radius: 7px;
-}
+
+    .movie-link img {
+        height: auto;
+        width: 140px;
+        border-radius: 7px;
+    }
+     .plus {
+        font-size: 40px;
+    }
+   
 }
 
 
@@ -366,78 +454,191 @@ nav button {
     .text {
         font-size: 42px;
     }
+
     .gridbox {
         padding: 0 60px;
     }
+
     .btn-container {
         display: flex;
         flex-direction: column;
         align-items: center;
     }
+
     .but3 {
         margin-top: 30px;
     }
+
     .but4 {
         margin-top: 30px;
-        padding: 10px;
     }
+
+    .four {
+        margin-top: 30px;
+        font-size: 15px;
+        height: 50px;
+        width: 160px;
+        margin-bottom: 50px;
+    }
+
     .container-wrapper {
         margin: 0 70px;
     }
+
     .faqbox {
-    padding-top: 35px;
-    font-size: 16px;
+        padding-top: 35px;
+        font-size: 16px;
     }
+
+      .faqbox h2 {
+        font-size: medium;
+    }
+
     .hero {
-    padding: 18px;
-    font-size: 18px;
+        padding: 18px;
+        font-size: 18px;
+    }
+     .plus {
+        font-size: 35px;
+    }
+    .text-1 {
+        font-size: medium;
+        margin-left: 60px;
     }
 }
-@media screen and (max-width:500px){
+
+@media screen and (max-width:500px) {
     .but2 {
         margin-right: 25px;
         margin-left: 5px;
         padding: 8px 17px;
     }
+
     .but1 {
         padding: 8px 17px;
-    } 
+    }
+    .but3 {
+        width: 300px;
+    }
+
+    .four {
+        margin-bottom: 80px;
+    }
+
     .logo {
         height: 25px;
     }
+
     nav {
         width: 95vw;
     }
+
     .vignette {
         background: (circle, rgba(0, 0, 0, 0) 40%, rgba(0, 0, 0, 0.8) 100%),
-      linear-gradient(to top, rgba(0, 0, 0, 0.6), transparent 40%);
+            linear-gradient(to top, rgba(0, 0, 0, 0.6), transparent 40%);
     }
+
     .line {
         background-color: white;
         height: 5px;
     }
+
     .faqbox {
-    padding-top: 35px;
-    font-size: 16px;
+        padding-top: 35px;
+        font-size: 16px;
     }
-    .hero {
-    padding: 17px;
-    font-size: 17px;
+
+    .faqbox h2 .hero {
+        padding: 17px;
+        font-size: 17px;
     }
+
     .text {
         margin-top: 110px;
     }
-    .movie-link img { 
-    height: auto;
-    width: 120px;  
-     border-radius: 6px;
-}
-.container-wrapper {
 
-    margin: 0 30px;
+    .movie-link img {
+        height: auto;
+        width: 120px;
+        border-radius: 6px;
+    }
+
+    .container-wrapper {
+
+        margin: 0 30px;
+    }
+     .plus {
+        font-size: 30px;
+    }
+    .text {
+        font-size: 35px;
+    }
+    .sm1 {
+        font-weight: normal;
+    }
+    .small {
+        margin-top: 20px;
+    }
+    .text-1 {
+        margin-left: 30px;
     }
 }
 
+@media screen and (max-width:400px) {
+    .text {
+        margin-left: 20px;
+        margin-right: 20px;
+        text-align: center;
+        
+    }
+    small {
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+    .four {
+        margin-bottom: 30px;
+    }
+    .but3 {
+     width: 250px;
+    }
+    .plus {
+        font-size: 25px;
+    }
+    .faqbox h2 .hero {
+        padding: 12px;
+        font-size: 15px;
+    }
+}
+@media screen and (max-width:370px) {
+     .four {
+        margin-bottom: 60px;
+    }
+    .but1 {
+    border-radius: 4px;
+    padding: 4px 12px;
+    color: white;
+    cursor: pointer;
+    border: 1px solid gray;
 
+}
+    .but2 {
+    border-radius: 4px;
+    padding: 4px 12px;
+    margin-left: 5px;
+}
+.small {
+    margin-top: 10px;
+    font-size: 13px;
+}
+.movie-link img {
+        height: auto;
+        width: 120px;
+        border-radius: 5px;
+    }
+     .faqbox h2 .hero {
+        padding: 10px;
+        font-size: 8px;
+        font-weight: normal;
+    }
 
-
+}
