--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
 .box {
     height: 700px;
     width: 100%;
-    opacity: 0.55;
+    opacity: 0.6;
     background-color: black;
     position: absolute;
     top: 0;
@@ -50,7 +50,7 @@ nav img {
     pointer-events: none;
     z-index: 2;
     background:
-        radial-gradient(circle, rgba(0, 0, 0, 0) 40%, rgba(0, 0, 0, 0.8) 100%),
+        radial-gradient(circle, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.8) 100%),
         linear-gradient(to top, rgba(0, 0, 0, 0.6), transparent 40%),
         linear-gradient(to bottom, rgba(0, 0, 0, 0.6), transparent 40%);
 }
