--- a/style.css
+++ b/style.css
@@ -148,10 +148,6 @@ nav button {
     margin-bottom: 100px;
 }
 
-/* .line {
-    height: 7px;
-    background-color: rgb(69, 66, 66);
-} */
 .netflix-divider {
   width: 100%;
   height: 60px;
@@ -233,7 +229,7 @@ nav button {
     width: 180px;
 }
 
-.reason-wrapper {
+/* .reason-wrapper {
     width: 78vw;
     margin: 0 auto;
     margin-top: 65px;
@@ -256,7 +252,7 @@ nav button {
     background: linear-gradient(135deg, #192142, #310a34); 
     margin-top: 15px; 
     margin: 10px;
-}
+} */
 
 .faqbox {
     padding-top: 60px;
